<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Product name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_name" />


        <!-- Input field -->
        <EditText
            android:id="@+id/product_name_edit_view"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="textCapWords" />

    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input field -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Unit for price ($) -->
            <TextView
                android:id="@+id/price_unit_text_view"
                style="@style/EditorUnitsStyle"
                android:layout_alignParentLeft="true"
                android:text="@string/unit_product_price" />

            <!-- Price field -->
            <EditText
                android:id="@+id/price_edit_view"
                style="@style/EditorFieldStyle"
                android:layout_toRightOf="@id/price_unit_text_view"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <LinearLayout
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quantity_decrement_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="-"
                android:textSize="14sp" />

            <!-- Input field -->
            <EditText
                android:id="@+id/quantity_edit_view"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:hint="0"
                android:inputType="number" />

            <Button
                android:id="@+id/quantity_increment_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="+"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_information" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/supplier_name_edit_view"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <!-- Phone Number field -->
            <EditText
                android:id="@+id/supplier_phone_edit_view"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone|number" />

            <ImageButton
                android:id="@+id/call_supplier_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/baseline_call_black_24" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
